# sherlock

./: .gitignore  Cargo.toml  README.md  config.toml
src/: html.rs  main.rs  puzzle.rs  solver.rs
src/puzzle/: grid.rs  hint.rs  solution.rs
src/puzzle/grid/: card.rs  html.rs  save.rs
src/puzzle/hint/: parsers.rs  recipes.rs
src/puzzle/hint/parsers/: tests.rs
src/solver/: card.rs  grid.rs  hint.rs  solution.rs
src/solver/grid/: card.rs  html.rs
src/solver/hint/: parsers.rs  recipes.rs
